flux-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-service
  labels:
    name: flux-service
spec:
  ports:
    - port: 80
      targetPort: 3030
      protocol: TCP
  selector:
    app: flux
  type: ClusterIP
