friendviz.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: friendviz
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: friendviz
    spec:
      containers:
      - name: friendviz
        image: 'cjblink1/friendviz:c52395202e3b203bc6abebf879f44b7e1d802428'
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: friendviz-service
  labels:
    name: friendviz-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: friendviz
  type: ClusterIP
